--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+:root {
+    --main-bg-color: #e2e8f0;
+}
+
+body {
+    background-color: var(--main-bg-color);
+}
